site done all pages to mobile version

--- a/pages/activateCode.html
+++ b/pages/activateCode.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="../assets/styles/main.css?v=1.5">
+    <link rel="stylesheet" href="../assets/styles/main.css?v=1.6">
     <link rel="stylesheet" href="../assets/styles/breakpoints.css?v=0.5">
     <link rel="stylesheet" href="../assets/styles/signIn.css?v=0.2">
 
@@ -281,6 +281,11 @@
         </div>
     </div>
 </footer>
+
+<!--================ SCROLL UP | Omonjon ================-->
+<a href="#" class="scroll_up" id="scroll-up">
+    <i class="bx bx-up-arrow-alt"></i>
+</a>
 
 <!--================ JQUERY JS 3.6.3v | Omonjon ================-->
 <script src="../assets/script/jquery-3.6.3.js"></script>
