--- a/pages/kasko/payment.html
+++ b/pages/kasko/payment.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../../assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="../../assets/styles/main.css?v=1.5">
+    <link rel="stylesheet" href="../../assets/styles/main.css?v=1.6">
     <link rel="stylesheet" href="../../assets/styles/breakpoints.css?v=0.5">
     <link rel="stylesheet" href="../../assets/styles/policy.css?v=0.3">
     <title>КАСКО - Оплата</title>
@@ -172,8 +172,8 @@
     <!--==================== PAYMENT DETAILS | Omonjon ====================-->
     <section class="container-mini mt-md-5 mt-4 pb-5">
         <h5 class="text-black fs-5 fw-semibold mb-3">Оплата</h5>
-        <div class="d-flex bg-white primary-radius primary-shadow primary-border w-100 pt-1 px-3 pb-3 mb-3">
-            <div class="row">
+        <div class="d-flex justify-content-center bg-white primary-radius primary-shadow primary-border w-100 pt-1 px-3 pb-3 mb-3">
+            <div class="row w-100">
                 <div class="col-12">
                     <div class="row py-12px border-bottom-dashed w-100">
                         <div class="col-sm-4 col-5">
@@ -275,6 +275,11 @@
         </div>
     </div>
 </footer>
+
+<!--================ SCROLL UP | Omonjon ================-->
+<a href="#" class="scroll_up" id="scroll-up">
+    <i class="bx bx-up-arrow-alt"></i>
+</a>
 
 <!--================ JQUERY JS 3.6.3v | Omonjon ================-->
 <script src="../../assets/script/jquery-3.6.3.js"></script>
