--- a/pages/osago/approve.html
+++ b/pages/osago/approve.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="../../assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="../../assets/styles/main.css?v=1.5">
+    <link rel="stylesheet" href="../../assets/styles/main.css?v=1.6">
     <link rel="stylesheet" href="../../assets/styles/breakpoints.css?v=0.5">
     <link rel="stylesheet" href="../../assets/styles/policy.css?v=0.3">
     <title>КАСКО - Подтвердить данные</title>
@@ -173,8 +173,8 @@
     <!--==================== INS DETAILS | Omonjon ====================-->
     <section class="container-mini mt-md-5 mt-4 pb-2">
         <h5 class="text-black fs-5 fw-semibold mb-3">Ваши данные</h5>
-        <div class="d-flex bg-white primary-radius primary-shadow primary-border w-100 py-1 px-3 mb-3 mb-2">
-            <div class="row">
+        <div class="d-flex justify-content-center bg-white primary-radius primary-shadow primary-border w-100 py-1 px-3 mb-3 mb-2">
+            <div class="row w-100">
                 <div class="col-12">
                     <div class="row py-12px border-bottom-dashed w-100">
                         <div class="col-sm-4 col-5">
@@ -218,8 +218,8 @@
             </div>
         </div>
         <h5 class="text-black fs-5 fw-semibold mt-4 mb-3">Владелец транспортного средства</h5>
-        <div class="d-flex bg-white primary-radius primary-shadow primary-border w-100 py-1 px-3 mb-3">
-            <div class="row">
+        <div class="d-flex justify-content-center bg-white primary-radius primary-shadow primary-border w-100 py-1 px-3 mb-3">
+            <div class="row w-100">
                 <div class="col-12">
                     <div class="row py-12px border-bottom-dashed w-100">
                         <div class="col-sm-4 col-5">
@@ -253,8 +253,8 @@
             </div>
         </div>
         <h5 class="text-black fs-5 fw-semibold mt-4 mb-3">Информация о транспортном средстве</h5>
-        <div class="d-flex bg-white primary-radius primary-shadow primary-border w-100 mb-3 py-1 px-3 mb-3">
-            <div class="row">
+        <div class="d-flex justify-content-center bg-white primary-radius primary-shadow primary-border w-100 mb-3 py-1 px-3 mb-3">
+            <div class="row w-100">
                 <div class="col-12">
                     <div class="row py-12px border-bottom-dashed w-100">
                         <div class="col-sm-4 col-5">
@@ -318,11 +318,12 @@
             </div>
         </div>
     </section>
+
     <!--==================== PAYMENT DETAILS | Omonjon ====================-->
     <section class="container-mini mt-4 pb-5">
         <h5 class="text-black fs-5 fw-semibold mb-3">Мои полисы</h5>
-        <div class="d-flex bg-white primary-radius primary-shadow primary-border w-100 p-3 mb-3">
-            <div class="row">
+        <div class="d-flex justify-content-center bg-white primary-radius primary-shadow primary-border w-100 p-3 mb-3">
+            <div class="row w-100">
                 <div class="col-12">
                     <div class="d-flex align-items-center justify-content-center primary-radius primary-border payment-brand p-3">
                         <img src="../../assets/images/svg/partner2.svg" class="object-fit-contain" alt="">
@@ -440,6 +441,11 @@
         </div>
     </div>
 </footer>
+
+<!--================ SCROLL UP | Omonjon ================-->
+<a href="#" class="scroll_up" id="scroll-up">
+    <i class="bx bx-up-arrow-alt"></i>
+</a>
 
 <!--================ JQUERY JS 3.6.3v | Omonjon ================-->
 <script src="../../assets/script/jquery-3.6.3.js"></script>
