--- a/pages/services/calculate.html
+++ b/pages/services/calculate.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="../../assets/styles/main.css?v=1.6">
     <link rel="stylesheet" href="../../assets/styles/breakpoints.css?v=0.5">
     <link rel="stylesheet" href="../../assets/styles/policy.css?v=0.3">
-    <title>КАСКО - Оформить</title>
+    <title>Дополнительные услуги - Оформить</title>
 </head>
 <body>
 <!--================ MENUS MODAL | Omonjon ================-->
@@ -171,7 +171,6 @@
 <main>
     <!--==================== INS FORM | Omonjon ====================-->
     <section class="container-mini mt-md-5 mt-4 pb-5">
-        <img class="w-100 d-none d-sm-block my-4" src="../../assets/images/section-line.png" alt="">
         <h5 class="fw-semibold text-black fs-5 mt-2 mb-3">Данные о ТС</h5>
         <form action="" method="post" class="row row-gap-3 pb-4 mb-4 border-bottom-dashed">
             <div class="col-md-5">
