--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="assets/styles/main.css?v=1.5">
+    <link rel="stylesheet" href="assets/styles/main.css?v=1.6">
     <link rel="stylesheet" href="assets/styles/breakpoints.css?v=0.5">
 
     <title>EpolisPlus</title>
@@ -207,7 +207,7 @@
                             <p class="d-flex align-items-center column-gap-2 bg-light mb-3 primary-radius text-black fw-semibold fs-7 pay-amount w-100">
                                 <img src="./assets/images/svg/coin.svg" alt="">150 000 сум</p>
                             <a class="btn btn-primary transition primary-radius py-2 px-4 w-100 d-flex justify-content-center"
-                               href="#">Оформить</a>
+                               href="pages/services/calculate.html">Оформить</a>
                         </div>
                     </div>
                 </div>
@@ -675,9 +675,10 @@
                 <div class="tab-pane fade" id="osago-tab-pane" role="tabpanel"
                      aria-labelledby="profile-tab"
                      tabindex="0">
-                    <form class="container-mini mx-auto mb-xl-4 pb-5" action="./pages/osago/calculate.html" method="post">
+                    <form class="container-mini mx-auto mb-xl-4 pb-5" action="./pages/osago/calculate.html"
+                          method="post">
                         <div class="row row-gap-3">
-                            <div class="col-3">
+                            <div class="col-lg-3 col-sm-5">
                                 <label for="exampleInputEmail2" class="form-label fs-8 text-light-emphasis">Гос номер
                                     <span
                                             class="text-secondary ms-1">*</span></label>
@@ -685,7 +686,7 @@
                                        id="exampleInputEmail2" placeholder="01M571SA"
                                        aria-describedby="emailHelp">
                             </div>
-                            <div class="col-4 ">
+                            <div class="col-lg-4 col-sm-7">
                                 <div class="d-flex">
                                     <div class="w-25 me-2">
                                         <label for="exampleInputPassword3"
@@ -704,10 +705,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-3">
+                            <div class="col-lg-3 col-md-10 col-sm-9 col-8">
                                 <label for="exampleInputPassword4"
-                                       class="form-label fs-8 text-light-emphasis text-nowrap">Количество водителей <span
-                                        class="text-secondary ms-1">*</span></label>
+                                       class="form-label fs-8 text-light-emphasis text-nowrap">Количество водителей
+                                    <span
+                                            class="text-secondary ms-1">*</span></label>
                                 <select class="form-select text-black" id="exampleInputPassword4"
                                         aria-label="Default select example" required>
                                     <option selected value="">Select</option>
@@ -716,10 +718,11 @@
                                     <option value="3">Three</option>
                                 </select>
                             </div>
-                            <div class="col-2">
+                            <div class="col-md-2 col-sm-3 col-4">
                                 <div class="d-flex align-items-start h-72px">
                                     <button type="submit"
-                                            class="btn btn-primary primary-radius transition fs-7 fw-bold mt-auto py-2">Расчет
+                                            class="btn btn-primary primary-radius transition fs-7 fw-bold mt-auto py-2 w-100Mb">
+                                        Расчет
                                     </button>
                                 </div>
                             </div>
@@ -771,16 +774,35 @@
                 <div class="tab-pane fade" id="travel-tab-pane" role="tabpanel"
                      aria-labelledby="contact-tab"
                      tabindex="0">
-                    <form class="container-mini mx-auto mb-5" action="" method="post">
+                    <form class="container-mini mx-auto mb-5" action="pages/travel/calculate.html" method="post">
                         <div class="row row-gap-3">
-                            <div class="col-12 col-md-6 col-sm-6">
+                            <div class="col-12 col-md-6">
+                                <label for="exampleInputEmail4" class="form-label fs-8 text-light-emphasis">Страны
+                                    <span class="text-secondary ms-1">*</span></label>
+                                <input required type="text" autocomplete="off" class="form-control"
+                                       id="exampleInputEmail4" placeholder="Страны..."
+                                       aria-describedby="emailHelp">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="exampleInputSelect4" class="form-label fs-8 text-light-emphasis">Тип полиса
+                                    <span class="text-secondary ms-1">*</span></label>
+                                <select class="form-select text-black" id="exampleInputSelect4"
+                                        aria-label="Default select example" required="">
+                                    <option selected="" value="">Select</option>
+                                    <option value="1">One</option>
+                                    <option value="2">Two</option>
+                                    <option value="3">Three</option>
+                                </select>
+                            </div>
+                            <!-- Block when select multi type travel start-->
+                            <div class="d-none col-12 col-md-4 col-sm-12">
                                 <label for="exampleInputEmail3" class="form-label fs-8 text-light-emphasis">Страны
                                     <span class="text-secondary ms-1">*</span></label>
                                 <input required type="text" autocomplete="off" class="form-control"
                                        id="exampleInputEmail3" placeholder="Страны..."
                                        aria-describedby="emailHelp">
                             </div>
-                            <div class="col-12 col-md-6 col-sm-6">
+                            <div class="d-none col-12 col-md-4 col-sm-6">
                                 <label for="exampleInputSelect2" class="form-label fs-8 text-light-emphasis">Тип полиса
                                     <span class="text-secondary ms-1">*</span></label>
                                 <select class="form-select text-black" id="exampleInputSelect2"
@@ -791,6 +813,19 @@
                                     <option value="3">Three</option>
                                 </select>
                             </div>
+                            <div class="d-none col-12 col-md-4 col-sm-6">
+                                <label for="exampleInputSelect3" class="form-label fs-8 text-light-emphasis">Дни
+                                    прибытия
+                                    <span class="text-secondary ms-1">*</span></label>
+                                <select class="form-select text-black" id="exampleInputSelect3"
+                                        aria-label="Default select example" required="">
+                                    <option selected="" value="">Select</option>
+                                    <option value="1">One</option>
+                                    <option value="2">Two</option>
+                                    <option value="3">Three</option>
+                                </select>
+                            </div>
+                            <!-- Block when select multi type travel end-->
                             <div class="col-12 col-lg-5 col-sm-4">
                                 <label for="exampleInputDate1"
                                        class="form-label fs-8 text-light-emphasis">Дата начала<span
@@ -841,7 +876,7 @@
                             </div>
                         </div>
                     </form>
-                    <div class="container-mini primary-radius border-dashed border-1 p-3 mx-auto mt-lg-2 d-none">
+                    <div class="container-mini primary-radius border-dashed border-1 p-3 mx-auto mt-lg-2">
                         <h4 class="text-black pb-3 border-bottom-dashed text-center mb-3 w-100">Наши страховые
                             партнеры</h4>
                         <div class="swiper partnersSwiper">
@@ -860,7 +895,7 @@
                         </div>
                     </div>
                     <!-- Hide Block -->
-                    <div class="container-mini mx-auto d-flex align-items-sm-start align-items-center flex-column pt-3 row-gap-3 border-top-dashed">
+                    <div class="container-mini mx-auto d-flex align-items-sm-start align-items-center flex-column pt-3 row-gap-3 border-top-dashed d-none">
                         <h4 class="fs-5 fw-semibold text-block text-sm-start text-center mt-3">Результаты</h4>
                         <div class="d-flex calc-result justify-content-sm-between justify-content-center flex-wrap align-items-center primary-radius bg-white row-gap-2 column-gap-3 w-100">
                             <div class="calc-result-img">
@@ -996,7 +1031,7 @@
                                         <img src="./assets/images/svg/coin.svg" alt="">0 сум</p>
                                     <div class="d-flex align-items-center">
                                         <a class="btn btn-primary transition primary-radius py-2 px-4 w-100 d-flex justify-content-center disabled"
-                                           href="#">Оформить</a>
+                                           href="pages/services/calculate.html">Оформить</a>
                                     </div>
                                 </div>
                             </div>
@@ -1048,7 +1083,7 @@
                                         <img src="./assets/images/svg/coin.svg" alt="">100 000 сум</p>
                                     <div class="d-flex align-items-center">
                                         <a class="btn btn-primary transition primary-radius py-2 px-4 w-100 d-flex justify-content-center"
-                                           href="#">Оформить</a>
+                                           href="pages/services/calculate.html">Оформить</a>
                                     </div>
                                 </div>
                             </div>
