--- a/pages/account.html
+++ b/pages/account.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="../assets/styles/main.css?v=1.5">
+    <link rel="stylesheet" href="../assets/styles/main.css?v=1.6">
     <link rel="stylesheet" href="../assets/styles/breakpoints.css?v=0.5">
     <link rel="stylesheet" href="../assets/styles/account.css?v=0.2">
 
@@ -223,8 +223,8 @@
                     </div>
                     <div class="d-flex flex-column align-items-start row-gap-1">
                         <h4 class="fs-4 fw-semibold text-black">John Smith</h4>
-                        <a class="fs-7 text-black d-flex align-items-center column-gap-2" href="tel:+998777777777"><img
-                                src="../assets/images/svg/phone-light.svg" alt="">+998(77)777-7777</a>
+                        <div class="fs-7 text-black d-flex align-items-center column-gap-2"><img
+                                src="../assets/images/svg/phone-light.svg" alt="">+998(77)777-7777</div>
                     </div>
                 </div>
                 <div class="d-flex align-items-center column-gap-2 mb-2">
@@ -450,6 +450,11 @@
         </div>
     </div>
 </footer>
+
+<!--================ SCROLL UP | Omonjon ================-->
+<a href="#" class="scroll_up" id="scroll-up">
+    <i class="bx bx-up-arrow-alt"></i>
+</a>
 
 <!--================ JQUERY JS 3.6.3v | Omonjon ================-->
 <script src="../assets/script/jquery-3.6.3.js"></script>
